style.css
#content{
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    justify-content: center;
    align-items: center;
    gap: 20px;
}
#bordersToggle {
    display: flex;
    gap: 5px;
}

#container{
    display: grid;
    border: 1px solid grey;
    background-color: white;
}

#gridcontrols {
    display: flex;
    align-items: center;
    gap: 5px;
}

.controlbtn {
    width: 25px;
    height: 25px;
    font-size: 12px;
}

.blockdefault {
    background-color: white;
    box-sizing: border-box;
}

.borders{
    border-top: 1px solid grey;
    border-left: 1px solid grey;
}

.noborders {
    border: none;
}

.paintedblack {
    background-color: black;
}

